<resources>
    <string name="app_name">My Travel Journal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about">About us</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
    <string name="imagine">Imagine</string>
    <string name="trip_name">Trip name</string>
    <string name="trip_destination">Destination</string>
    <string name="trip_price">Price (EUR)</string>
    <string name="trip_bookmark">Bookmark as favourite</string>
    <string name="rb_city">City Break</string>
    <string name="rb_seaside">Sea Side</string>
    <string name="rb_mountain">Mountains</string>
    <string name="trip_type">Trip Type</string>
    <string name="rating">Rating</string>
    <string name="save">Save trip</string>
    <string name="user_name">Burlacu Marius-Marian</string>
    <string name="user_email">marius.bm29@gmail.com</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="edit">Edit trip</string>
    <string name="added_favourite">Added to favourite</string>
    <string name="favorite">Favourite Trips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="retype_pass">Retype Password</string>
    <string name="full_username">Full username</string>
    <string name="mail_contact">Email</string>
    <string name="nume">Nume</string>
    <string name="nrTel">Nr. telefon</string>
    <string name="telefon">555-5555</string>
    <string name="aplicatie">Aplicatie</string>
    <string name="denumire">Denumire</string>
    <string name="data_aplicatie">Data lansarii</string>
    <string name="platforma">Platforma</string>
    <string name="data">02/02/2021</string>
    <string name="android">Android</string>
    <string name="fara_trip">You have no trips! Press the "+" button to add a trip!</string>
    <string name="fara_trip_fav">You have no favourite trips yet!</string>
    <string name="id">id</string>
    <string name="favorit">Favourite</string>
    <string name="share">If you enjoy the app, make sure to share it!</string>
    <string name="weather">Weather</string>
    <string name="description">Description</string>
    <string name="condition">Conditions</string>
</resources>