<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

<!--    contine fragmentele pe care o sa le folosim   -->

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.androidfundamentalsproject.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.androidfundamentalsproject.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.androidfundamentalsproject.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.androidfundamentalsproject.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />
</navigation>