<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripReadOnly"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="127dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/ll_denumire_readonly"
        android:background="@drawable/border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_name"
            android:textAllCaps="true"
            android:layout_margin="10dp"/>


        <TextView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:id="@+id/tv_readonly_nume"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:paddingLeft="15dp"
            android:autoSizeTextType="uniform"
            />


    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ll_data_readonly"
        android:background="@drawable/border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textAllCaps="true"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_readonly_dataStart"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:paddingLeft="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_date"
            android:textAllCaps="true"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/tv_readonly_dataEnd"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:paddingLeft="15dp"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ll_denumire_readonly"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="3"
        android:id="@+id/ll_pret_readonly"
        android:background="@drawable/border"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trip_price"
            android:textAllCaps="true"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/tv_readonly_pret"
            android:gravity="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:paddingRight="10dp"
            android:paddingLeft="35dp"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ll_pret_readonly"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="3"
        android:id="@+id/ll_rating_readonly"
        android:background="@drawable/border"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating"
            android:textAllCaps="true"
            android:layout_margin="10dp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:id="@+id/rating_readonly"
            android:isIndicator="true"
            />

    </LinearLayout>




    <LinearLayout
        android:layout_width="175dp"
        android:layout_height="120dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ll_rating_readonly"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/ll_destination_readonly"
        android:background="@drawable/border"
        android:layout_marginTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_destination"
        android:textAllCaps="true"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_readonly_destination"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:paddingLeft="15dp"
        android:autoSizeTextType="uniform"
        />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_favourite_readonly"
        android:layout_width="135dp"
        android:layout_height="121dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/ll_destination_readonly"
        app:layout_constraintTop_toBottomOf="@+id/ll_rating_readonly">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/favorit"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/tv_readonly_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:paddingStart="15dp"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>