<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/border"
        android:layout_margin="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/trip_name"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_tripName"
                android:gravity="center"
                android:layout_weight="2"
                android:background="@drawable/border"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/trip_destination"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_trip_destination"
                android:gravity="center"
                android:layout_weight="2"
                android:background="@drawable/border"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_price"
                    android:text="@string/trip_price"
                    android:gravity="center"
                    android:layout_weight="0.8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_trip_price"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.8"
                    android:background="@drawable/border"/>


            </LinearLayout>

            <RatingBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                android:layout_weight="2.2"
                style="@style/Widget.AppCompat.RatingBar"
                android:isIndicator="true"
                android:layout_marginLeft="8dp"
                android:id="@+id/trip_rating"/>


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_bookmark_24"
            android:text="@string/trip_bookmark"
            android:id="@+id/btn_bookmark"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
